Improving benchmarks